--- a/benchmarks/turnt.toml
+++ b/benchmarks/turnt.toml
@@ -1,3 +1,3 @@
-command = "bril2json < {filename} | brili -p {args}"
+command = "bril2json < {filename} | brili -p {args} | python ../filter.py"
 output.out = "-"
 output.prof = "2"
